...
        image.translatesAutoresizingMaskIntoConstraints = false
        return image
    }()

    private lazy var buyButton: UIButton = {
        let button = UIButton()
        button.setTitle("BUY", for: .normal)
        button.setTitleColor(.red, for: .normal)
        button.setTitleColor(.yellow, for: .selected)
        button.setTitleColor(.yellow, for: .highlighted)
        button.setBackgroundImage(UIImage(named: "blue_pixel"), for: .normal)
        button.setBackgroundImage(UIImage(named: "blue_pixel")?.alfa(0.8), for: .selected)
        button.setBackgroundImage(UIImage(named: "blue_pixel")?.alfa(0.8), for: .highlighted)
...
